hphp/hack/test/typecheck/function_pointer/class_meth_reified_trait.php.exp
WARN: File "class_meth_reified_trait.php", line 8, characters 8-10:
Static method call on a trait: `Foo::bar` (Warn[12020])
  File "class_meth_reified_trait.php", line 3, characters 7-9:
  `Foo` is defined here
WARN: File "class_meth_reified_trait.php", line 10, characters 8-10:
Static method call on a trait: `Foo::bar` (Warn[12020])
  File "class_meth_reified_trait.php", line 3, characters 7-9:
  `Foo` is defined here
ERROR: File "class_meth_reified_trait.php", line 8, characters 3-12:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "class_meth_reified_trait.php", line 4, characters 36-36:
  Definition is here
ERROR: File "class_meth_reified_trait.php", line 10, characters 3-12:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "class_meth_reified_trait.php", line 4, characters 36-36:
  Definition is here
