hphp/hack/test/typecheck/function_pointer/class_meth_reified_trait.php
<?hh

trait Foo {
  public static function bar<reify T>(): void {}
}

function test(): void {
  Foo::bar<>;

  Foo::bar<>;
}
